Fri Feb 18 18:06:21 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Databases now have a get_doclength() method, to return the length
	  of a given document.  There may be efficiency issues with using
	  this during the search, however.

	* Extra constant terms, such as that in BM25Weight, now used
	  and accounted for in min weight calculations.

Fri Feb 18 17:49:13 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmQuery::get_terms now returns the terms in termpos order.

Fri Feb 18 13:53:34 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Added second test for reversed boolean queries.
	  (When the full mset is not returned.)

Fri Feb 18 13:54:37 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented match functors

	* IRDocument is now OmDocument, on <om/omdocument.h>

Fri Feb 18 13:53:34 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test for reversed boolean queries.

Thu Feb 17 18:13:24 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test for collapsing on a key

Thu Feb 17 16:57:42 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added interface to stemming algorithms to API (OmStem class)

Thu Feb 17 12:00:33 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Header files now get installed in a subdirectory (om/)

Tue Feb 15 17:03:31 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented the "allow query terms" option for Expand Terms.

	* Added some useful ExpandDeciders to omenquire.h

Tue Feb 15 12:59:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The dvi documentation is now automatically built and added
	  to the distribution.

Mon Feb 14 17:23:38 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented OmQuery::get_terms()

	* Implemented OmEnquire::get_matching_terms()

Mon Feb 14 13:37:56 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
